el ojo y el mensaje de productos se oculta y se muestra simultaneamente

--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -37,7 +37,7 @@
         </form>
         <div class="toggle-visibility">
             <button id="toggleVisibilityBtn" onclick="toggleVisibility()">
-                <i id="visibilityIcon" class="fas fa-eye-slash"></i> <!-- Ojo abierto -->
+                <i id="visibilityIcon" class="fas fa-eye-slash"></i> <!-- Ojo cerrado -->
             </button>
         </div>  
         <div id="additionalFilters" style="display: none;">
