--- a/static/styles_see_clientes.css
+++ b/static/styles_see_clientes.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
@@ -19,6 +19,13 @@ body {
 h1 {
     text-align: center;
     color: #333;
+}
+
+.table-container {
+    max-height: 500px; /* Ajusta la altura según sea necesario */
+    overflow-y: auto; /* Agrega la barra de desplazamiento vertical */
+    overflow-x: hidden; /* Agrega la barra de desplazamiento horizontal si es necesario */
+    margin-top: 20px; /* Espacio superior */
 }
 
 table {
@@ -38,6 +45,31 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+    position: -webkit-sticky; /* Para navegadores basados en WebKit (Chrome, Safari) */
+    position: sticky;
+    top: 0; /* Mantiene los encabezados en la parte superior */
+    z-index: 1; /* Asegura que los encabezados estén sobre el contenido desplazable */
+}
+
+/* Anchos específicos para cada columna */
+th:nth-child(1), td:nth-child(1) {
+    width: 15%; /* Ajusta el ancho de la columna Nombre */
+}
+
+th:nth-child(2), td:nth-child(2) {
+    width: 15%; /* Ajusta el ancho de la columna Apellido */
+}
+
+th:nth-child(3), td:nth-child(3) {
+    width: 15%; /* Ajusta el ancho de la columna Domicilio */
+}
+
+th:nth-child(4), td:nth-child(4) {
+    width: 10%; /* Ajusta el ancho de la columna Teléfono */
+}
+
+th:nth-child(5), td:nth-child(5) {
+    width: 10%; /* Ajusta el ancho de la columna de acciones */
 }
 
 .button {
