movi a otra ruta los archivos css

--- a/templates/realizar_venta.html
+++ b/templates/realizar_venta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Realizar Venta</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles_realizar_venta.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_realizar_venta.css') }}">
 </head>
 <body>
     <div class="container">
