--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar Producto</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles_add_product.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_add_product.css') }}">
 </head>
 <body>
     <a href="{{ url_for('dashboard') }}" class="button dashboard-button">Volver al Menu</a>
