--- a/templates/edit_cliente.html
+++ b/templates/edit_cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Cliente</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles_edit_cliente.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_edit_cliente.css') }}">
 </head>
 <body>
     <div class="container">
