--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles_login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_login.css') }}">
 </head>
 <body>
     <div class="login-container">
