--- a/templates/see_clientes.html
+++ b/templates/see_clientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ver Clientes</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_clientes.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_see_clientes.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
     <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script>
