--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_login.css') }}">
+    <script src="{{ url_for('static', filename='js/scripts_login.js') }}"></script>
 </head>
 <body>
     <div class="login-container">
