--- a/static/css/styles_add_cliente.css
+++ b/static/css/styles_add_cliente.css
@@ -37,7 +37,7 @@ body {
 }
 
 h1 {
-    color: #007bff;
+    color: #000000;
     font-size: 2em;
     margin-bottom: 30px;
     position: relative;
@@ -45,7 +45,7 @@ h1 {
 
 h1::after {
     content: '';
-    width: 60px;
+    width: 140px;
     height: 4px;
     background-color: #007bff;
     position: absolute;
