modificando el menu de editar, eliminar y venta en ver productos

--- a/static/css/styles_see_products.css
+++ b/static/css/styles_see_products.css
@@ -190,11 +190,17 @@ td img {
 }
 
 .dropbtn {
-    background-color: #f8f9fa;
+    background-color: #007BFF;
     border: none;
     cursor: pointer;
     padding: 10px;
     font-size: 16px;
+    color: white; /* Asegúrate de que el texto sea visible */
+    border-radius: 4px;
+}
+
+.dropbtn:hover {
+    background-color: #0056b3;
 }
 
 .dropdown-content {
@@ -211,32 +217,67 @@ td img {
     left: -130px; /* Alinea el menú con el borde izquierdo del contenedor */
 }
 
-.dropdown-content a, .dropdown-content form {
-    color: #333;
+/* Estilos para los botones dentro del dropdown */
+.dropdown-content a, .dropdown-content button {
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    border: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
 }
 
-.dropdown-content a:hover, .dropdown-content form:hover {
+.dropdown-content a:hover, .dropdown-content button:hover {
     background-color: #f1f1f1;
-}
-.dropbtn {
-    background-color: #007BFF;
+    color: #000;
 }
 
-.dropbtn:hover {
+/* Estilos adicionales para las acciones específicas */
+.edit-button {
+    background-color: #007bff;
+    max-width: 130px;
+}
+
+.edit-button:hover {
     background-color: #0056b3;
 }
 
 .delete-button {
     background-color: #FF4136;
-    width: 100%;
+    max-width: 165px;
 }
 
 .delete-button:hover {
     background-color: #D9362C;
 }
+
+.sale-button {
+    background-color: #28a745;
+    max-width: 130px;
+}
+
+.sale-button:hover {
+    background-color: #218838;
+}
+
+/* Mostrar el menú cuando está activo */
+.show {
+    display: block;
+}
+
+
+/* Oculta el menú por defecto */
+.dropdown-content {
+    display: none;
+}
+
+/* Muestra el menú cuando tiene la clase .show */
+.dropdown-content.show {
+    display: block;
+}
+
 
 /* Estilos para las opciones de ordenamiento */
 #order-options {
