--- a/templates/see_ventas.html
+++ b/templates/see_ventas.html
@@ -12,7 +12,7 @@
     <script src="{{ url_for('static', filename='js/toggle_visibility.js') }}"></script>
 </head>
 <body>
-    <a href="{{ url_for('dashboard') }}" class="button back-button">Volver</a>
+    <a href="{{ url_for('dashboard') }}" class="button dashboard-button">Volver al menu</a>
     <div class="container">
         <h1>Ventas Realizadas</h1>
          <!-- Mensaje de número de resultados encontrados -->
