abonos totales y saldo por pagar ya estan unificados

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,9 +42,9 @@
                 </a>
             </div>
             <div class="grid-item ventas">
-                <a href="{{ url_for('see_products') }}">
-                    <h3>Ventas</h3>
-                    <p>Realizar una venta</p>
+                <a href="{{ url_for('abonos.see_abonos') }}">
+                    <h3>Abonos</h3>
+                    <p>Ver Abonos</p>
                 </a>
             </div>
         </div>        
