--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,7 +41,7 @@
                     <p>Ver las ventas realizadas</p>
                 </a>
             </div>
-            <div class="grid-item ventas">
+            <div class="grid-item abonos">
                 <a href="{{ url_for('abonos.see_abonos') }}">
                     <h3>Abonos</h3>
                     <p>Ver Abonos</p>
