--- a/static/css/styles_see_abonos.css
+++ b/static/css/styles_see_abonos.css
@@ -191,3 +191,60 @@ img {
     background-color: #f2f2f2;
     z-index: 1;
 }
+
+
+/* Estilos para el menú desplegable */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #f8f9fa;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 9999; /* Asegúrate de que el z-index sea alto para sobreponerse a otros elementos */
+    border-radius: 4px;
+    padding: 10px 0;
+    /* Ajusta la posición del menú desplegable según sea necesario */
+    top: 100%; /* Coloca el menú justo debajo del botón */
+    left: -130px; /* Alinea el menú con el borde izquierdo del contenedor */
+}
+
+.dropdown-content a, .dropdown-content form {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover, .dropdown-content form:hover {
+    background-color: #f1f1f1;
+}
+.dropbtn {
+    background-color: #007BFF;
+}
+
+.dropbtn:hover {
+    background-color: #0056b3;
+}
+
+.delete-button {
+    background-color: #FF4136;
+    width: 100%;
+}
+
+.delete-button:hover {
+    background-color: #D9362C;
+}
+    
